2009-03-19  Mark Rowe  <mrowe@apple.com>

        Reviewed by Oliver Hunt.

        Work around <rdar://problem/6698023> by activating fonts from disk.

        * DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj: Copy fonts into DumpRenderTree.resources
        in the built products directory.
        * DumpRenderTree/mac/DumpRenderTree.mm:
        (activateFonts): Activate the fonts from disk.

2009-03-18  Mark Rowe  <mrowe@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/6693300> Don't rely on printf from TestNetscapePlugIn appearing in test results

        Switch from using printf to using the NPAPI to invoke console.log so that plug-in messages appear
        in test results even when the plug-in's stdout differs from DumpRenderTree's stdout.

        * DumpRenderTree/TestNetscapePlugIn.subproj/main.cpp:
        (log): Invoke console.log via the NPAPI.
        (NPP_Destroy): Call log instead of printf.
        (NPP_SetWindow): Ditto.
        (handleEventCarbon): Ditto.
        (handleEventCocoa): Ditto.
        (NPP_HandleEvent): Pass the instance in to the event handler.

2009-03-17  Mark Rowe  <mrowe@apple.com>

        Reviewed by Oliver Hunt.

        Use the normal search rules for tests inside the platform directory.

        This allows tests inside the platform directory to have different results
        on different versions of Mac OS X.

        * Scripts/run-webkit-tests:

2009-03-17  David Kilzer  <ddkilzer@apple.com>

        resolve-ChangeLogs should not die on unmerged non-ChangeLog files

        Reviewed by Adam Roben.

        Fixes the following bug in resolve-ChangeLogs:

            Use of uninitialized value in -e at ./WebKitTools/Scripts/resolve-ChangeLogs line 132.
            Died at ./WebKitTools/Scripts/resolve-ChangeLogs line 164.

        * Scripts/resolve-ChangeLogs:
        (findUnmergedChangeLogs): Check the result of findChangeLog() to